--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="body">
 
-<button class="butmenu1" onclick="run3()">
+<button class="butmenu1" onclick="menu1()">
     Нажми меня
 </button >
 <div class="panels">
@@ -18,6 +18,12 @@
                     Нажмихуйжми
                 </button>
                 <button class="but2" onclick="run2()">
+                    Нажмихуйжми
+                </button>
+                <button class="but3" onclick="run3()">
+                    Нажмихуйжми
+                </button>
+                <button class="but4" onclick="run4()">
                     Нажмихуйжми
                 </button>
             </p>
